--- a/collaborative-whiteboard/src/app/components/editor/whiteboard/whiteboard.component.html
+++ b/collaborative-whiteboard/src/app/components/editor/whiteboard/whiteboard.component.html
@@ -1,1 +1,52 @@
-<p>whiteboard works!</p>
+<svg id="svg" width="1171" height="811" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <pattern id="smallGrid" width="8" height="8" patternUnits="userSpaceOnUse">
+      <path
+        id="smallGridPath"
+        d="M 8 0 H 0 V 8"
+        fill="none"
+        stroke="gray"
+        stroke-width="0.5"
+      />
+    </pattern>
+    <pattern
+      id="largeGrid"
+      width="80"
+      height="80"
+      patternUnits="userSpaceOnUse"
+    >
+      <rect id="largeGridRect" width="80" height="80" fill="url(#smallGrid)" />
+      <path
+        id="largeGridPath"
+        d="M 80 0 H 0 V 80"
+        fill="none"
+        stroke="gray"
+        stroke-width="2"
+      />
+    </pattern>
+  </defs>
+  <rect
+    transform="translate(0, 0)"
+    id="surface"
+    x="-80"
+    y="-80"
+    width="1400"
+    height="1000"
+    fill="url(#largeGrid)"
+  />
+  <g id="objects"></g>
+
+  <!-- <g>
+    <rect
+      id="rectangle"
+      x="100"
+      y="100"
+      width="200"
+      height="100"
+      stroke="black"
+      stroke-width="0.5"
+      fill="white"
+      translate="transform(0,0)"
+    />
+  </g> -->
+</svg>
