--- a/collaborative-whiteboard/src/app/components/properties/properties.component.scss
+++ b/collaborative-whiteboard/src/app/components/properties/properties.component.scss
@@ -1,7 +1,31 @@
 .properties {
     height: 100%;
     width: 100%;
+    padding: 5px;
     border: 1px solid rgb(161, 161, 161);
     border-radius: 5px;
     background-color: rgb(250, 250, 250);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+:host::ng-deep {
+    .p-inputgroup {
+        margin: 10px 0;
+    }
+
+    
+}
+
+#stroke-select {
+    border-color: rgb(206, 212, 218);
+    border-radius: 0 5px 5px 0;
+}
+
+.color-input {
+    height: 50px;
+    width: 30%;
+    border-color: rgb(206, 212, 218);
 }
