Connect whiteboard to properties

--- a/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
+++ b/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
@@ -34,7 +34,9 @@
     height="1000"
     fill="url(#largeGrid)"
   />
-  <g id="objects"></g>
+  <g id="objects">
+    <!-- <text x="100" y="100" fill="blue" font-weight="bold">My cat</text> -->
+  </g>
 
   <!-- <g>
     <rect
