Add drawing feature

--- a/collaborative-whiteboard/src/app/components/toolbox/toolbox.component.html
+++ b/collaborative-whiteboard/src/app/components/toolbox/toolbox.component.html
@@ -4,8 +4,8 @@
       rectangle
     </div>
     <div class="item" (click)="onGridItemClick(ShapeType.CIRCLE)">circle</div>
-    <div class="item" (click)="onGridItemClick(ShapeType.DIAMOND)">diamond</div>
-    <div class="item">path</div>
+    <!-- <div class="item" (click)="onGridItemClick(ShapeType.DIAMOND)">diamond</div> -->
+    <div class="item" (click)="onGridItemClick(ShapeType.PATH)">path</div>
     <div class="item">text</div>
   </div>
 </div>
