--- a/collaborative-whiteboard/src/app/components/toolbox/toolbox.component.html
+++ b/collaborative-whiteboard/src/app/components/toolbox/toolbox.component.html
@@ -6,6 +6,6 @@
     <div class="item" (click)="onGridItemClick(ShapeType.CIRCLE)">circle</div>
     <!-- <div class="item" (click)="onGridItemClick(ShapeType.DIAMOND)">diamond</div> -->
     <div class="item" (click)="onGridItemClick(ShapeType.PATH)">path</div>
-    <div class="item">text</div>
+    <div class="item" (click)="onGridItemClick(ShapeType.TEXT)">text</div>
   </div>
 </div>
