--- a/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
+++ b/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
@@ -57,7 +57,7 @@
     <g id="objects">
       <!-- <text x="100" y="100" fill="blue" font-weight="bold">My cat</text> -->
     </g>
-
+    <g id="anchors"></g>
     <g id="temp-objects">
       <path
         id="temp-path"
