Fix problems with pen feature

--- a/collaborative-whiteboard/src/app/components/toolbox/toolbox.component.html
+++ b/collaborative-whiteboard/src/app/components/toolbox/toolbox.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="item" (click)="onGridItemClick(ShapeType.CIRCLE)">circle</div>
     <!-- <div class="item" (click)="onGridItemClick(ShapeType.DIAMOND)">diamond</div> -->
-    <div class="item" (click)="onGridItemClick(ShapeType.PATH)">path</div>
+    <div class="item" (click)="onGridItemClick(ShapeType.PATH)">pen</div>
     <div class="item" (click)="onGridItemClick(ShapeType.TEXT)">text</div>
   </div>
 </div>
