--- a/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
+++ b/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
@@ -55,8 +55,10 @@
       />
     </g>
     <g id="objects">
-      <!-- <text x="100" y="100" fill="blue" font-weight="bold">My cat</text> -->
+      <g id="shapes"></g>
+      <g id="text"></g>
     </g>
+    <g id="helpers"></g>
     <g id="anchors"></g>
     <g id="temp-objects">
       <path
