--- a/collaborative-whiteboard/src/app/components/properties/properties.component.scss
+++ b/collaborative-whiteboard/src/app/components/properties/properties.component.scss
@@ -13,10 +13,34 @@
 
 :host::ng-deep {
     .p-inputgroup {
-        margin: 10px 0;
-    }
+        display: flex;
+        justify-content: flex-start;
+        margin: 8px 0;
 
-    
+        input {
+            border-width: 1px;
+            border-color: rgb(206,212, 218);
+            width: 120px;
+            text-align: center;
+        }
+
+        textarea { 
+            resize: none;
+            text-align: center;
+        }
+
+        #font-size {
+            width: 50px;
+            text-align: center;
+        }
+    }    
+}
+
+.ngif {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #stroke-select {
@@ -24,8 +48,18 @@
     border-radius: 0 5px 5px 0;
 }
 
+
+
 .color-input {
     height: 50px;
     width: 30%;
     border-color: rgb(206, 212, 218);
+}
+
+.fill-opacity {
+    margin: 8px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
