--- a/collaborative-whiteboard/src/app/components/navbar/navbar.component.scss
+++ b/collaborative-whiteboard/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,8 @@
+.container {
+    height: 100%;
+    width: 100%;
+    padding: 2px;
+}
 :host::ng-deep {
     .p-menubar {
         padding: 0 0.5rem;
