--- a/collaborative-whiteboard/src/app/app.component.html
+++ b/collaborative-whiteboard/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-navbar></app-navbar>
-<app-editor></app-editor>
+<div style="height: 8vh">
+  <app-navbar></app-navbar>
+</div>
+<div style="height: 92vh">
+  <router-outlet></router-outlet>
+</div>
