Change navbar styling

--- a/collaborative-whiteboard/src/app/components/navbar/navbar.component.html
+++ b/collaborative-whiteboard/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-<p-menubar>
-  <ng-template pTemplate="start">
-    <p>CoWh</p>
-  </ng-template>
-</p-menubar>
+<div class="container">
+  <p-menubar styleClass="shadow-2">
+    <ng-template pTemplate="start">
+      <p>Collaborative Whiteboard</p>
+    </ng-template>
+  </p-menubar>
+</div>
