--- a/collaborative-whiteboard/src/app/components/sign-in/sign-in.component.scss
+++ b/collaborative-whiteboard/src/app/components/sign-in/sign-in.component.scss
@@ -15,3 +15,11 @@ small {
 small:hover {
     font-weight: bold;
 }
+
+.empty-info {
+    color: red;
+}
+
+.empty-info:hover {
+    font-weight: 400;
+}
