--- a/collaborative-whiteboard/src/app/components/navbar/navbar.component.scss
+++ b/collaborative-whiteboard/src/app/components/navbar/navbar.component.scss
@@ -3,6 +3,23 @@
     width: 100%;
     padding: 2px;
 }
+
+.user-icon {
+    cursor: pointer;
+}
+
+.info-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.change-password-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 :host::ng-deep {
     .p-menubar {
         padding: 0 0.5rem;
@@ -10,6 +27,19 @@
 
     .p-menubar-start {
         font-weight: light;
-        padding: 0 0.5rem
+        padding: 0 0.5rem;
+    }
+    .p-menubar-end {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0.5rem;
+        text-align: center;
+        gap: 0.5rem;
+    }
+
+    .p-button {
+        font-weight: 400;
+        
     }
 }
