Fix member role bug

--- a/collaborative-whiteboard/src/app/app.component.html
+++ b/collaborative-whiteboard/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div style="height: 8vh">
+<div>
   <app-navbar></app-navbar>
 </div>
-<div style="height: 92vh">
+<div style="height: 93vh">
   <router-outlet></router-outlet>
 </div>
