--- a/collaborative-whiteboard/src/app/components/sign-up/sign-up.component.html
+++ b/collaborative-whiteboard/src/app/components/sign-up/sign-up.component.html
@@ -24,7 +24,7 @@
   </div>
   <div class="form-input">
     <label for="email">Last name</label>
-    <input pInputText id="last-name" />
+    <input pInputText id="last-name" [(ngModel)]="lastName" />
   </div>
   <div class="form-input">
     <label for="password">Password</label>
