--- a/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
+++ b/collaborative-whiteboard/src/app/components/whiteboard/whiteboard.component.html
@@ -1,58 +1,16 @@
 <div class="wrapper">
   <svg id="svg" width="1201" height="801" xmlns="http://www.w3.org/2000/svg">
     <defs>
-      <pattern
-        id="smallGrid"
-        width="8"
-        height="8"
-        patternUnits="userSpaceOnUse"
-      >
-        <path
-          id="smallGridPath"
-          d="M 8 0 H 0 V 8"
-          fill="none"
-          stroke="gray"
-          stroke-width="0.5"
-        />
+      <pattern id="smallGrid" width="8" height="8" patternUnits="userSpaceOnUse">
+        <path id="smallGridPath" d="M 8 0 H 0 V 8" fill="none" stroke="gray" stroke-width="0.5"/>
       </pattern>
-      <pattern
-        id="largeGrid"
-        width="80"
-        height="80"
-        patternUnits="userSpaceOnUse"
-      >
-        <rect
-          id="largeGridRect"
-          width="80"
-          height="80"
-          fill="url(#smallGrid)"
-        />
-        <path
-          id="largeGridPath"
-          d="M 80 0 H 0 V 80"
-          fill="none"
-          stroke="gray"
-          stroke-width="2"
-        />
+      <pattern id="largeGrid" width="80" height="80" patternUnits="userSpaceOnUse">
+        <rect id="largeGridRect" width="80" height="80" fill="url(#smallGrid)"/>
+        <path id="largeGridPath" d="M 80 0 H 0 V 80" fill="none" stroke="gray" stroke-width="2"/>
       </pattern>
     </defs>
-    <g
-      id="surface"
-      transform="translate(0, 0)"
-      x="0"
-      y="0"
-      width="1171"
-      height="811"
-    >
-      <rect
-        transform="translate(0, 0)"
-        id="grid"
-        x="0"
-        y="0"
-        width="1171"
-        height="811"
-        fill="url(#largeGrid)"
-      />
+    <g id="surface" transform="translate(0, 0)" x="0" y="0" width="1171" height="811">
+      <rect id="grid" transform="translate(0, 0)" x="0" y="0" width="1171" height="811" fill="url(#largeGrid)"/>
     </g>
     <g id="objects">
       <g id="shapes"></g>
